@@ -1,11 +1,19 @@
 package org.cardanofoundation.job.service.impl;
 
 import java.io.IOException;
+import java.math.BigInteger;
+import java.sql.Timestamp;
+import java.time.LocalDateTime;
+import java.time.ZoneOffset;
 import java.util.Arrays;
+import java.util.Comparator;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 import lombok.AccessLevel;
@@ -19,14 +27,17 @@ import org.springframework.util.ObjectUtils;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonMappingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
-
+import org.cardanofoundation.explorer.consumercommon.entity.PoolHash;
+import org.cardanofoundation.explorer.consumercommon.entity.PoolMetadataRef;
 import org.cardanofoundation.explorer.consumercommon.entity.PoolOfflineData;
+import org.cardanofoundation.explorer.consumercommon.entity.PoolOfflineFetchError;
 import org.cardanofoundation.job.constant.JobConstants;
 import org.cardanofoundation.job.dto.PoolData;
 import org.cardanofoundation.job.projection.PoolOfflineHashProjection;
 import org.cardanofoundation.job.repository.PoolHashRepository;
 import org.cardanofoundation.job.repository.PoolMetadataRefRepository;
 import org.cardanofoundation.job.repository.PoolOfflineDataRepository;
+import org.cardanofoundation.job.repository.PoolOfflineFetchErrorRepository;
 import org.cardanofoundation.job.service.PoolOfflineDataStoringService;
 
 @Component
@@ -34,18 +45,22 @@ import org.cardanofoundation.job.service.PoolOfflineDataStoringService;
 @Slf4j
 public class PoolOfflineDataStoringServiceImpl implements PoolOfflineDataStoringService {
 
+  final PoolOfflineFetchErrorRepository poolOfflineFetchErrorRepository;
   private final PoolMetadataRefRepository poolMetadataRefRepository;
-  static final String POOL_NAME = "name";
-  static final String TICKER = "ticker";
   final PoolOfflineDataRepository poolOfflineDataRepository;
   final PoolHashRepository poolHashRepository;
+
   final ObjectMapper objectMapper;
+  static final String POOL_NAME = "name";
+  static final String TICKER = "ticker";
 
   public PoolOfflineDataStoringServiceImpl(
+      PoolOfflineFetchErrorRepository poolOfflineFetchErrorRepository,
       PoolOfflineDataRepository poolOfflineDataRepository,
       PoolHashRepository poolHashRepository,
       ObjectMapper objectMapper,
       PoolMetadataRefRepository poolMetadataRefRepository) {
+    this.poolOfflineFetchErrorRepository = poolOfflineFetchErrorRepository;
     this.poolOfflineDataRepository = poolOfflineDataRepository;
     this.poolHashRepository = poolHashRepository;
     this.objectMapper = objectMapper;
@@ -53,38 +68,112 @@ public class PoolOfflineDataStoringServiceImpl implements PoolOfflineDataStoring
   }
 
   @Override
-  public void insertBatch(Set<PoolData> successPools) {
-    log.info("Fetch Data size {}", successPools.size());
+  public void insertSuccessPoolOfflineData(List<PoolData> successPools) {
     Set<PoolOfflineData> savingPoolData = new HashSet<>();
     var existedPoolData =
         poolOfflineDataRepository.findPoolOfflineDataHashByPoolIds(
-            successPools.stream().map(PoolData::getPoolId).collect(Collectors.toList()));
+            successPools.stream().map(PoolData::getPoolId).toList());
 
     handleExistedPoolOfflineData(successPools, savingPoolData, existedPoolData);
 
-    poolOfflineDataRepository.saveAll(savingPoolData);
+    poolOfflineDataRepository.saveAll(savingPoolData.stream()
+        .sorted(Comparator.comparing(PoolOfflineData::getPoolId)
+            .thenComparing(poolOfflineData -> poolOfflineData.getPoolMetadataRef().getId()))
+        .toList());
     log.info("Insert batch size {}", savingPoolData.size());
-    successPools.clear();
+  }
+
+  @Override
+  public void insertFailOfflineData(List<PoolData> failedPools) {
+
+    // key: PoolOfflineFetchError::getId, value: PoolOfflineFetchError
+    Map<Long, PoolOfflineFetchError> failPoolOfflineData = poolOfflineFetchErrorRepository.findPoolOfflineFetchErrorByPoolMetadataRefIn(
+            failedPools.stream()
+                .map(PoolData::getMetadataRefId)
+                .toList())
+        .stream()
+        .collect(
+            Collectors.toMap(
+                poolOfflineFetchError -> poolOfflineFetchError.getPoolMetadataRef().getId(),
+                Function.identity()));
+
+    List<Long> usedPoolId = failPoolOfflineData.values()
+        .stream()
+        .map(poolOfflineFetchError -> poolOfflineFetchError.getPoolHash().getId())
+        .toList();
+
+    List<Long> usedPoolMetadataRef = failPoolOfflineData.keySet().stream().toList();
+
+    Map<Long, PoolHash> poolHashMap = poolHashRepository.findByIdIn(
+            failedPools.stream().map(PoolData::getPoolId)
+                .filter(poolId -> !usedPoolId.contains(poolId))
+                .toList())
+        .stream()
+        .collect(Collectors.toMap(PoolHash::getId, Function.identity()));
+
+    Map<Long, PoolMetadataRef> poolMetadataRef = poolMetadataRefRepository.findByIdIn(
+            failedPools.stream()
+                .map(PoolData::getMetadataRefId)
+                .filter(failedMetaData -> !usedPoolMetadataRef.contains(failedMetaData))
+                .toList())
+        .stream()
+        .collect(Collectors.toMap(PoolMetadataRef::getId, Function.identity()));
+
+    failPoolOfflineData.values().forEach(poolOfflineFetchError -> {
+      final Long poolId = poolOfflineFetchError.getPoolHash().getId();
+      if (!poolHashMap.containsKey(poolId)) {
+        poolHashMap.put(poolId, poolOfflineFetchError.getPoolHash());
+      }
+
+      final Long poolMetaDataRefId = poolOfflineFetchError.getPoolMetadataRef().getId();
+      if(!poolMetadataRef.containsKey(poolMetaDataRefId)){
+        poolMetadataRef.put(poolMetaDataRefId, poolOfflineFetchError.getPoolMetadataRef());
+      }
+    });
+
+
+    failedPools
+        .parallelStream()
+        .forEach(failData ->
+            Optional.ofNullable(failPoolOfflineData.get(failData.getMetadataRefId()))
+                .ifPresentOrElse(poolOfflineFetchError -> {
+                  poolOfflineFetchError.setFetchTime(
+                      Timestamp.valueOf(LocalDateTime.now(ZoneOffset.UTC)));
+                  poolOfflineFetchError.setRetryCount(
+                      poolOfflineFetchError.getRetryCount() + BigInteger.ONE.intValue());
+                }, () -> {
+                  PoolOfflineFetchError error = PoolOfflineFetchError.builder()
+                      .poolHash(poolHashMap.get(failData.getPoolId()))
+                      .poolMetadataRef(poolMetadataRef.get(failData.getMetadataRefId()))
+                      .fetchError(failData.getErrorMessage())
+                      .retryCount(BigInteger.ONE.intValue())
+                      .fetchTime(Timestamp.valueOf(LocalDateTime.now(ZoneOffset.UTC)))
+                      .build();
+
+                  failPoolOfflineData.put(failData.getMetadataRefId(), error);
+                }));
+    poolOfflineFetchErrorRepository.saveAll(failPoolOfflineData.values());
   }
 
   /**
-   * @param poolData
-   * @param savingPoolData
-   * @param existedPoolData
+   * @param poolData        list pool data need to handle
+   * @param savingPoolData  set of Pool Offline Metadata need to save
+   * @param existedPoolData set of pool data in database
    */
   private void handleExistedPoolOfflineData(
-      Set<PoolData> poolData,
+      List<PoolData> poolData,
       Set<PoolOfflineData> savingPoolData,
       Set<PoolOfflineHashProjection> existedPoolData) {
 
     poolData.forEach(
         pod -> {
           Optional<PoolOfflineHashProjection> poolOfflineHash =
-              findPoolWithSameHash(existedPoolData, pod);
+              findPoolWithPoolRef(existedPoolData, pod);
 
           poolOfflineHash.ifPresentOrElse(
               exPod -> {
-                if (!exPod.getHash().equals(pod.getHash())) {
+                if (!exPod.getHash()
+                    .equals(pod.getHash())) { // update exist pool metadata when if json data change
                   poolOfflineDataRepository
                       .findByPoolIdAndAndPmrId(pod.getPoolId(), pod.getMetadataRefId())
                       .ifPresent(
@@ -104,7 +193,7 @@ public class PoolOfflineDataStoringServiceImpl implements PoolOfflineDataStoring
                             exPod ->
                                 pod.getHash().equals(exPod.getHash())
                                     && pod.getPoolId().equals(exPod.getPoolId()))
-                        .findFirst();
+                        .findFirst(); // check if handle duplicate data
 
                 if (existSavingPoolData.isEmpty()) {
                   mapPoolOfflineData(pod).ifPresent(savingPoolData::add);
@@ -117,15 +206,15 @@ public class PoolOfflineDataStoringServiceImpl implements PoolOfflineDataStoring
    * Find pool have offline data of not
    *
    * @param existedPoolData Set of existed Pool Offline Data
-   * @param pod data object transfer of pool offline data {
+   * @param pod             data object transfer of pool offline data {
    * @return if existed Optional of {@link PoolOfflineHashProjection} projection of empty
    */
-  private Optional<PoolOfflineHashProjection> findPoolWithSameHash(
+  private Optional<PoolOfflineHashProjection> findPoolWithPoolRef(
       Set<PoolOfflineHashProjection> existedPoolData, PoolData pod) {
     return existedPoolData.stream()
         .filter(
             exPod ->
-                exPod.getHash().equals(pod.getHash()) && pod.getPoolId().equals(exPod.getPoolId()))
+                exPod.getPoolRefId().equals(pod.getMetadataRefId()) && pod.getPoolId().equals(exPod.getPoolId()))
         .findFirst();
   }
 
@@ -164,7 +253,7 @@ public class PoolOfflineDataStoringServiceImpl implements PoolOfflineDataStoring
    * Mapping pool offline data features input parameters
    *
    * @param poolData data object transfer of pool offline data
-   * @param map map contains features extracted from json
+   * @param map      map contains features extracted from json
    * @return Optional of PoolOfflineData or empty
    */
   private Optional<PoolOfflineData> buildOfflineData(PoolData poolData, Map<String, Object> map) {
